securityGroup.tf
# security group for EC2 instance
resource "aws_security_group" "ec2_sg" { 
  name        = "ec2_sg"
  description = "Allow SSH and HTTP traffic"
  vpc_id      = aws_vpc.vpc_ec2.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
